
2008-07-12  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Bug fixes for BarPlot
        * tests.py: Added new tests for the bar_plot function

2008-07-11  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Added BarPlot working draft
        * tests.py: Added tests regarding the use of bar_plot function

2008-07-07  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Changed PizzaPlot Class and pizza_plot function names
                        to PiePlot and pie_plot respectively;
                        Refactored Gantt Chart into Object Oriented mode;
                        Fixed the function DotLinePlot.calc_extents;
                        Added color_series argument to Plot constructor;

2008-07-04  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * tests.py: Test suit used to check if the module is working correctly
        * CairoPlot.py: Refactored Pizza Graphic into Object Oriented mode;
                        Fixed the function Plot.render_bounding_box which
                        wasn't drawing the line after defining it.

2008-07-04  João S. O. Bueno <gwidion@gmail.com>

        * NEWS: initial NEWS
        * CairoPlot.py: Refactored DotLine Graphic into Object Oriented mode
                        Added support for other kind of Cairo Surfaces 
                        Added suport for changing some parameters of plot,
                        through modification of object properties.
                        Temporarily disabled series legend plotting

2008-07-03  João S. O. Bueno <gwidion@gmail.com>

        * ChangeLog: initial ChangeLog
        * COPYING: License file added (GNU LGPL 2.1)
        * TODO: initial TODO


2008-06-13   Rodrigo Araújo  <alf.rodrigo@gmail.com>

        * Initial commit