@@ -9,9 +9,10 @@ Medium Priority:
     - Implement data series as classes and objects
     - Implement Bar and Histogram charts
     - Enhance conformity with English terminology
-    - Create test scripts
     - Create more graphic elements (axis titles, data legend, etc...)
     - Create a python egg and setup-tools style install
     - Allow different combinations of line, dot, area plots for linear series
-
     - add pseudo_3D effects
+
+Low Priority:
+    - Split or organize tests.py into a test suite
