@@ -1,4 +1,5 @@
 import CairoPlot
+import cairo
 
 #data = {'teste00' : [27], 'teste01' : [10], 'teste02' : [18], 'teste03' : [5], 'teste04' : [1], 'teste05' : [22], 'teste06' : [31], 'teste07' : [8], 'teste08' : [13], 'teste09' : [10]}
 #data = [[1, 3, 11], [8, 9, 21], [13, 10, 9], [2, 30, 8]]
@@ -7,14 +8,14 @@ import CairoPlot
 
 #data = [[1], [2], [3,4], [4], [5], [6], [7], [8], [9], [10]]
 #CairoPlot.bar_plot ('bar2', data, 400, 300, border = 20, grid = True)
-data = [[3,4], [4,8], [5,3], [9,1]]
-v_labels = ["line1", "line2", "line3", "line4", "line5", "line6"]
-h_labels = ["group1", "group2", "group3", "group4"]
-CairoPlot.bar_plot ('bar', data, 600, 200, border = 20, grid = True)
-CairoPlot.bar_plot ('bar2', data, 600, 200, border = 20, grid = True, h_labels = h_labels)
-CairoPlot.bar_plot ('bar3', data, 600, 200, border = 20, grid = True, v_labels = v_labels)
-CairoPlot.bar_plot ('bar4', data, 600, 200, border = 20, grid = True, h_labels = h_labels, v_labels = v_labels)
-CairoPlot.bar_plot ('bar4', data, 600, 200, border = 20, grid = True, h_labels = h_labels, v_labels = v_labels, h_bounds = (0,20))
+#data = [[3,4], [4,8], [5,3], [9,1]]
+#v_labels = ["line1", "line2", "line3", "line4", "line5", "line6"]
+#h_labels = ["group1", "group2", "group3", "group4"]
+#CairoPlot.bar_plot ('bar', data, 600, 200, border = 20, grid = True)
+#CairoPlot.bar_plot ('bar2', data, 600, 200, border = 20, grid = True, h_labels = h_labels)
+#CairoPlot.bar_plot ('bar3', data, 600, 200, border = 20, grid = True, v_labels = v_labels)
+#CairoPlot.bar_plot ('bar4', data, 600, 200, border = 20, grid = True, h_labels = h_labels, v_labels = v_labels)
+#CairoPlot.bar_plot ('bar4', data, 600, 200, border = 20, grid = True, h_labels = h_labels, v_labels = v_labels, h_bounds = (0,20))
 #teste_data = [0, 1, 3.5, 8.5, 9, 0, 10, 10, 2, 1]
 #CairoPlot.dot_line_plot('teste', teste_data, 400, 300, axis = True, grid = True)
          
@@ -26,8 +27,15 @@ CairoPlot.bar_plot ('bar4', data, 600, 200, border = 20, grid = True, h_labels =
 #teste_h_legend = ["jan/2008", "feb/2008", "mar/2008", "apr/2008", "may/2008"]
 #CairoPlot.dot_line_plot('teste3', teste_data_2, 400, 300, h_legend = teste_h_legend, axis = True, grid = True)
 
-#teste_data = {"john" : 123, "mary" : 489, "philip" : 600 , "suzy" : 235, "yman" : 800}
-#CairoPlot.pie_plot("pie_teste", teste_data, 200, 200)
+background = cairo.LinearGradient(300, 0, 300, 400)
+background.add_color_stop_rgb(0,0.4,0.4,0.4)
+background.add_color_stop_rgb(1.0,0.1,0.1,0.1)
+
+teste_data = {"john" : 700, "mary" : 100, "philip" : 100 , "suzy" : 50, "yman" : 50}
+CairoPlot.pie_plot("pie_teste", teste_data, 600, 400, background = background )
+CairoPlot.donut_plot("donut_teste1", teste_data, 600, 400, background = background, gradient = True, shadow = True, inner_radius = 0.3)
+CairoPlot.donut_plot("donut_teste2", teste_data, 600, 400, gradient = True, shadow = True, inner_radius = 0.3)
+CairoPlot.donut_plot("donut_teste3", teste_data, 600, 400, gradient = False, shadow = False, inner_radius = 0.3)
 
 #pieces = [ (0.5,5.5) , [(0,4),(6,8)] , (5.5,7) , (7,8)]
 #h_legend = [ 'teste01', 'teste02', 'teste03', 'teste04']
